<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/htab_maincontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
...
            android:id="@+id/llSubLayout"
            layout="@layout/movie_detail_sub_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btnDetailBook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/book_btn_h"
        android:layout_gravity="bottom|end"
        android:background="@android:color/holo_red_dark"
        android:text="@string/book_tickets"
        android:textColor="@color/white" />
...
