...
                    android:textColor="@color/half_black"
                    android:textSize="@dimen/medium_font_size" />
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMovieList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:scrollbars="vertical"
                android:visibility="visible" />

...
